--- a/test.html
+++ b/test.html
@@ -1,3 +1,13 @@
-<h1>Hey I'm a big heading.</h1>
-<p>Hey. I'm a paragraph element. Cool huh?</p>
-<a href="https://google.com" target="_blank"title="Let's go to google">Click me! I'm a link</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test Page</title>
+</head>
+<body>
+	<h1>Hey I'm a big heading.</h1>
+	<p>Hey. I'm a <b>paragraph</b> element. Cool huh?</p>
+	<a href="https://google.com" target="_blank"title="Let's go to google">Click me! I'm a link</a>
+	<img src="img/cat.jpeg">
+
+</body>
+</html>
