--- a/test.html
+++ b/test.html
@@ -7,6 +7,8 @@
 	<h1>Hey I'm a big heading.</h1>
 	<p>Hey. I'm a <b>paragraph</b> element. Cool huh?</p>
 	<a href="https://google.com" target="_blank"title="Let's go to google">Click me! I'm a link</a>
+	<p>My name is:<br>
+	Kitty Cat</p>
 	<img src="img/cat.jpeg">
 
 </body>
