--- a/index.html
+++ b/index.html
@@ -17,20 +17,26 @@
 		<p>Ralph is awesome! He's an 8-bit videogame bad guy who travels the length of the arcade to prove that he's a good guy.</p>
 		<img src="img/ralph-and-friends.jpeg">
 		<p>Ralph and his friends</p>
+		<!-- Characteristics -->
 		<h2>Ralph's Characteristics</h2>
 		<ol>
 			<li>He's got big hands</li>
 			<li>He's treated as bad-ass</li>
 			<li>He's trying to be a good guy</li>
 		</ol>
+		<!-- Friends -->
 		<h2>Ralph's Friends</h2>
 		<p>Ralph has some awesome friends. I think his best friend is Glitch. She's awesome. Click on the links below to read more about them:</p>
 		<ul>
 			<li><a href="https://en.wikipedia.org/wiki/Pac-Man">Pac-Man</a></li>
 			<li><a href="https://en.wikipedia.org/wiki/Mario">Mario</a></li>
 			<li><a href="https://en.wikipedia.org/wiki/Luigi">Luigi</a></li>
+			<li><a href="https://disney.fandom.com/wiki/Vanellope_von_Schweetz">Vanellope von Schweetz A.K.A. Glitch</a></li>
 		</ul>
-
 	</main>
+	<!-- footer element -->
+	<footer>
+		<p>This site was created during a <a href="https://taptapkaboom.com">Tap Tap Kaboom</a> class. &copy; Pamela</p>
+	</footer>
 </body>
 </html>
