--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<h2>Ralph's Friends</h2>
 		<p>Ralph has some awesome friends. I think his best friend is Glitch. She's awesome. Click on the links below to read more about them:</p>
 		<ul>
-			<li><a href="https://en.wikipedia.org/wiki/Pac-Man">Pac-Man</a></li>
+			<li><a target="_blank" href="https://en.wikipedia.org/wiki/Pac-Man">Pac-Man</a></li>
 			<li><a href="https://en.wikipedia.org/wiki/Mario">Mario</a></li>
 			<li><a href="https://en.wikipedia.org/wiki/Luigi">Luigi</a></li>
 			<li><a href="https://disney.fandom.com/wiki/Vanellope_von_Schweetz">Vanellope von Schweetz A.K.A. Glitch</a></li>
