--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 	<title>Wreck-it Ralph</title>
+	<link rel="icon" href="img/ralph.jpeg">
 </head>
 <body>
 	<!-- header element -->
@@ -29,9 +30,9 @@
 		<p>Ralph has some awesome friends. I think his best friend is Glitch. She's awesome. Click on the links below to read more about them:</p>
 		<ul>
 			<li><a target="_blank" href="https://en.wikipedia.org/wiki/Pac-Man">Pac-Man</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Mario">Mario</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Luigi">Luigi</a></li>
-			<li><a href="https://disney.fandom.com/wiki/Vanellope_von_Schweetz">Vanellope von Schweetz A.K.A. Glitch</a></li>
+			<li><a target="_blank" href="https://en.wikipedia.org/wiki/Mario">Mario</a></li>
+			<li><a target="_blank" href="https://en.wikipedia.org/wiki/Luigi">Luigi</a></li>
+			<li><a target="_blank" href="https://disney.fandom.com/wiki/Vanellope_von_Schweetz">Vanellope von Schweetz A.K.A. Glitch</a></li>
 		</ul>
 	</main>
 	<!-- footer element -->
