--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <html>
 <head>
 	<title>Wreck-it Ralph</title>
-	<link rel="icon" href="img/ralph.jpeg">
+	<link rel="icon" href="img/ralph-avatar.jpeg">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!-- header element -->
 	<header>
-		<img src="img/ralph.jpeg">
+		<img src="img/ralph-avatar.jpeg">
 		<h1>Wreck-it Ralph</h1>
 	</header>
 	<!-- to add a comment press ctrl + forward slash -->
