--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<title>Wreck-it Ralph</title>
 	<link rel="icon" href="img/ralph-avatar.jpeg">
 	<link rel="stylesheet" type="text/css" href="css/hero.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
 	<!-- header element -->
@@ -13,12 +16,13 @@
 		<h1>Wreck-it Ralph</h1>
 	</header>
 	<!-- to add a comment press ctrl + forward slash -->
+
 	<!-- main element -->
 	<main>
 		<h2>About Ralph</h2>
 		<p>Ralph is awesome! He's an 8-bit videogame bad guy who travels the length of the arcade to prove that he's a good guy.</p>
-		<img src="img/ralph-and-friends.jpeg">
-		<p>Ralph and his friends</p>
+		<img src="img/ralph-and-friendss.jpeg">
+		<p class="caption">Ralph and his friends</p>
 		<!-- Characteristics -->
 		<h2>Ralph's Characteristics</h2>
 		<ol>
